<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/bmi_calculator"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"

        android:layout_marginTop="12dp"
        android:text="@string/weight_kg"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/height"
        tools:layout_editor_absoluteX="60dp" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/height_cm"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="72dp"
        android:text="@string/your_result"

        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_23"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/bmiCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/healthRisk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/bmiCategory"
        tools:layout_editor_absoluteX="28dp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />


</androidx.constraintlayout.widget.ConstraintLayout>